# pipe

./: README.org  pyproject.toml  shell.nix
pipe/: __init__.py  pipe.py
tests/: test_pipe.py
