[tool.poetry]
name = "pipe"
version = "1.0.0.0"
description = "... Pipe!"
authors = ["sylvorg <jeet.ray@syvl.org>"]
license = "MIT"
include = [
	"pipe/**/*.py",
	"pipe/**/*.hy",
]

[tool.poetry.dependencies]
python = "^3.10"
beartype = "*"
more-itertools = "*"
pytest = "*"
rich = "*"

[tool.poetry.dev-dependencies]
poetry = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
	"--strict-markers",
]
markers = [
	"pipe",
]
